build/log/idf_py_stdout_output_50505
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd "/Users/alex/Documents/TP IoT/TP-IoT-WiFi/build/bootloader/esp-idf/esptool_py" && /Users/alex/.espressif/python_env/idf5.5_py3.13_env/bin/python /Users/alex/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/alex/Documents/TP\ IoT/TP-IoT-WiFi/build/bootloader/bootloader.bin
Bootloader binary size 0x6650 bytes. 0x9b0 bytes (9%) free.
[2/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/alex/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-2375-g1f46216a72\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/Users/alex/Documents/TP IoT/TP-IoT-WiFi/build/config" -I/Users/alex/esp/esp-idf/components/newlib/platform_include -I/Users/alex/esp/esp-idf/components/freertos/config/include -I/Users/alex/esp/esp-idf/components/freertos/config/include/freertos -I/Users/alex/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/alex/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/alex/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/alex/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/alex/esp/esp-idf/components/freertos/esp_additions/include -I/Users/alex/esp/esp-idf/components/esp_hw_support/include -I/Users/alex/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/alex/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/alex/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/alex/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/alex/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/alex/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/alex/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/alex/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/alex/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/alex/esp/esp-idf/components/heap/include -I/Users/alex/esp/esp-idf/components/heap/tlsf -I/Users/alex/esp/esp-idf/components/log/include -I/Users/alex/esp/esp-idf/components/soc/include -I/Users/alex/esp/esp-idf/components/soc/esp32 -I/Users/alex/esp/esp-idf/components/soc/esp32/include -I/Users/alex/esp/esp-idf/components/soc/esp32/register -I/Users/alex/esp/esp-idf/components/hal/platform_port/include -I/Users/alex/esp/esp-idf/components/hal/esp32/include -I/Users/alex/esp/esp-idf/components/hal/include -I/Users/alex/esp/esp-idf/components/esp_rom/include -I/Users/alex/esp/esp-idf/components/esp_rom/esp32/include -I/Users/alex/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/Users/alex/esp/esp-idf/components/esp_rom/esp32 -I/Users/alex/esp/esp-idf/components/esp_common/include -I/Users/alex/esp/esp-idf/components/esp_system/include -I/Users/alex/esp/esp-idf/components/esp_system/port/soc -I/Users/alex/esp/esp-idf/components/esp_system/port/include/private -I/Users/alex/esp/esp-idf/components/xtensa/esp32/include -I/Users/alex/esp/esp-idf/components/xtensa/include -I/Users/alex/esp/esp-idf/components/xtensa/deprecated_include -I/Users/alex/esp/esp-idf/components/lwip/include -I/Users/alex/esp/esp-idf/components/lwip/include/apps -I/Users/alex/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/alex/esp/esp-idf/components/lwip/lwip/src/include -I/Users/alex/esp/esp-idf/components/lwip/port/include -I/Users/alex/esp/esp-idf/components/lwip/port/freertos/include -I/Users/alex/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/alex/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/alex/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/alex/esp/esp-idf/components/mqtt/esp-mqtt/include -I/Users/alex/esp/esp-idf/components/esp_event/include -I/Users/alex/esp/esp-idf/components/tcp_transport/include -I/Users/alex/esp/esp-idf/components/esp-tls -I/Users/alex/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/Users/alex/esp/esp-idf/components/mbedtls/port/include -I/Users/alex/esp/esp-idf/components/mbedtls/mbedtls/include -I/Users/alex/esp/esp-idf/components/mbedtls/mbedtls/library -I/Users/alex/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/alex/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/Users/alex/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/Users/alex/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/Users/alex/esp/esp-idf/components/esp_timer/include -I/Users/alex/esp/esp-idf/components/esp_wifi/include -I/Users/alex/esp/esp-idf/components/esp_wifi/include/local -I/Users/alex/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/alex/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/alex/esp/esp-idf/components/esp_phy/include -I/Users/alex/esp/esp-idf/components/esp_phy/esp32/include -I/Users/alex/esp/esp-idf/components/esp_netif/include -I/Users/alex/esp/esp-idf/components/nvs_flash/include -I/Users/alex/esp/esp-idf/components/esp_partition/include -I"/Users/alex/Documents/TP IoT/TP-IoT-WiFi/managed_components/nopnop2002__sx127x/include" -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=/Users/alex/Documents/TP IoT/TP-IoT-WiFi=." -fmacro-prefix-map=/Users/alex/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c '/Users/alex/Documents/TP IoT/TP-IoT-WiFi/main/main.c'
In file included from /Users/alex/Documents/TP IoT/TP-IoT-WiFi/main/main.c:6:
/Users/alex/Documents/TP IoT/TP-IoT-WiFi/main/main.c: In function 'mqtt_event_handler':
/Users/alex/Documents/TP IoT/TP-IoT-WiFi/main/main.c:38:22: error: 'MQTT_TAG' undeclared (first use in this function)
   38 |             ESP_LOGI(MQTT_TAG, "游닌 Message re칞u MQTT re칞u: %.*s",
      |                      ^~~~~~~~
/Users/alex/esp/esp-idf/components/log/include/esp_log.h:218:111: note: in definition of macro 'ESP_LOG_LEVEL'
  218 |         if (ESP_LOG_GET_LEVEL(configs)==ESP_LOG_ERROR)        { esp_log(ESP_LOG_CONFIG_INIT(ESP_LOG_ERROR),   tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                               ^~~
/Users/alex/esp/esp-idf/components/log/include/esp_log.h:125:41: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  125 | #define ESP_LOGI(tag, format, ...) do { ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO, tag, format, ##__VA_ARGS__); } while(0)
      |                                         ^~~~~~~~~~~~~~~~~~~
/Users/alex/Documents/TP IoT/TP-IoT-WiFi/main/main.c:38:13: note: in expansion of macro 'ESP_LOGI'
   38 |             ESP_LOGI(MQTT_TAG, "游닌 Message re칞u MQTT re칞u: %.*s",
      |             ^~~~~~~~
/Users/alex/Documents/TP IoT/TP-IoT-WiFi/main/main.c:38:22: note: each undeclared identifier is reported only once for each function it appears in
   38 |             ESP_LOGI(MQTT_TAG, "游닌 Message re칞u MQTT re칞u: %.*s",
      |                      ^~~~~~~~
/Users/alex/esp/esp-idf/components/log/include/esp_log.h:218:111: note: in definition of macro 'ESP_LOG_LEVEL'
  218 |         if (ESP_LOG_GET_LEVEL(configs)==ESP_LOG_ERROR)        { esp_log(ESP_LOG_CONFIG_INIT(ESP_LOG_ERROR),   tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                               ^~~
/Users/alex/esp/esp-idf/components/log/include/esp_log.h:125:41: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  125 | #define ESP_LOGI(tag, format, ...) do { ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO, tag, format, ##__VA_ARGS__); } while(0)
      |                                         ^~~~~~~~~~~~~~~~~~~
/Users/alex/Documents/TP IoT/TP-IoT-WiFi/main/main.c:38:13: note: in expansion of macro 'ESP_LOGI'
   38 |             ESP_LOGI(MQTT_TAG, "游닌 Message re칞u MQTT re칞u: %.*s",
      |             ^~~~~~~~
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
